# CalendarUA

./: .gitignore  CLEANUP_REPORT.md  CalendarUA-onedir.spec  CalendarUA-onefile.spec  CalendarUA.py  Phase6_Category_Implementation_Summary.md  Phase7_Ribbon_Implementation_Summary.md  README.md  SCHEDULEWORX_UI_IMPLEMENTATION_PLAN.md  db_schema.md  pyproject.toml  requirements.txt  rrule.md  test_categories.py  test_category_full.py  test_category_integration.py  test_phase7_ribbon.py  test_schedule_with_category.py  修改計畫.md
.github/workflows/: build-release.yml
core/: lunar_calendar.py  opc_handler.py  opc_security_config.py  rrule_parser.py  schedule_models.py  schedule_resolver.py
database/: calendarua.db  mysql_manager.py  sqlite_manager.py
docs/: db_schema.md
scripts/: inspect_pngs.py
ui/: app_icon.py  category_manager_dialog.py  combo_wheel_helper.py  database_settings_dialog.py  exceptions_panel.py  general_panel.py  holiday_settings_dialog.py  holidays_panel.py  month_grid.py  occurrence_choice_dialog.py  occurrence_edit_dialog.py  recurrence_dialog.py  runtime_panel.py  schedule_canvas.py  weekly_event_dialog.py  weekly_panel.py  wheel_select_list.py
