[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendarua"
version = "2.4.0"
description = "CalendarUA - OPC UA schedule desktop application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.7.2",
    "asyncua==1.1.5",
    "python-dateutil==2.9.0",
    "qasync==0.27.1",
    "lunardate==0.2.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller==6.18.0",
]

[tool.setuptools]
packages = ["core", "database", "ui"]

[dependency-groups]
dev = [
    "pyinstaller==6.18.0",
]
